--- a/dissertation/chapter4.tex
+++ b/dissertation/chapter4.tex
@@ -1,4 +1,4 @@
-\graphicspath{{../images/ch6/}}	% Image directory
+\graphicspath{{../images/ch4/}}	% Image directory
 
 
 \chapter{Hybrid resistive-pulse optical detections in microfluidic systems}
@@ -8,23 +8,25 @@
 
 	\section{Background \& Theory}
 		
-		As we have seen, RP sensing is a method for determing the physical properties of particles by way of measuring the change in resistance of a conducting channel they create as they pass through it. RP's primary advantage is that it can be employed at many scales and in a diverse number of applications, and is especially useful at the nanoscale where the number of particle characterization techniques is limited---in particular, optical imaging is prohibited at this scale. To first order, the mechanism for the rp current pulses is straight forward: when the particle enters the channel, it occupies a volume that would otherwise be occupied by ions, decreasing the conductance, and increasing the total system resistance. According to this simple model, the resistive of the system is determined solely by the equation
+		As we have seen, RP sensing is a method for determining the physical properties of particles by way of measuring the change in resistance of a conducting channel they create as they pass through it. RP's primary advantage is that it can be employed at many scales and in a diverse number of applications, and is especially useful at the nanoscale where the number of particle characterization techniques is limited---in particular, optical imaging is prohibited at this scale. To first order, the mechanism for the rp current pulses is straight forward: when the particle enters the channel, it occupies a volume that would otherwise be occupied by ions, decreasing the conductance, and increasing the total system resistance. According to this simple model, the resistive of the system is determined solely by the equation
 		
 		\begin{equation}\label{eq:resistance}
 			R=\rho\int A^{-1}\left(x\right) dx,
 		\end{equation}
 		
-		where $R$ is the system resistance, $A\left(x\right)$ is the annular cross-section of the channel at position $x$, and $\rho$ is the resistivity of the solution. In most RP set ups, the current is measured instead of the resistance, so Eq. \ref{eq:resistance} is usually inverted via Ohm's law to obtain the current: $\Delta I/I_{p}=\Delta R/R_{0}$, where $I$ is the measured current, and the subscripts $0$ and $p$ denote quantities when the channel is empty, and occupied, respectively. While Eq. \ref{eq:resistance} serves as a good approximation for the RP amplitude that may be accurate in some cases, it fails to take into account the electrostatic boundary conditions present in the system. For a completely insulating pore and particles, these boundary conditions are $E_{n}=\sigma$, and $E_{t}=0$, where $E$ is the electric field, $n$ is the direction normal to the surface in question, $t$ is any transverse direction, and $\sigma$ is the charge density of the surface. The effects of boundary conditions can have a large influence on the measured rp amplitude that is position and geometry dependent, and therefore, most importantly can affect measurement of the size of a particle from the resistive pulse amplitude. Therefore, significant efforts have beend irected towards finding more accurate expressions for specific particle and channel geometries. For instance, Smythe calculated the expected RP amplitude for spheres passing along the axis of cylindrical channels, and arrived at the expressions
+		where $R$ is the system resistance, $A\left(x\right)$ is the annular cross-section of the channel at position $x$, and $\rho$ is the resistivity of the solution. In most RP set ups, the current is measured instead of the resistance, so Eq. \ref{eq:resistance} is usually inverted via Ohm's law to obtain the current: $\Delta I/I_{p}=\Delta R/R_{0}$, where $I$ is the measured current, and the subscripts $0$ and $p$ denote quantities when the channel is empty, and occupied, respectively. While Eq. \ref{eq:resistance} serves as a good approximation for the RP amplitude that may be accurate in some cases, it fails to take into account the electrodynamic boundary conditions present in the system, namely that the normal component of the electric field vanishes at the surface of the insulating layer, or $\vec{E}\cdot\hat{n}\left.\right\vert_{\mathrm{surface}}=0$. The effects of boundary conditions can have a large influence on the measured RP amplitude that is position and geometry dependent, and therefore, most importantly can affect measurement of the size of a particle from the resistive pulse amplitude. Therefore, significant efforts have been directed towards finding more accurate expressions for specific particle and channel geometries. For instance, Smythe calculated the expected RP amplitude for spheres passing along the axis of cylindrical channels, and arrived at the expression
 		
 		\begin{equation}\label{eq:spherecylinderRP}
 			\frac{\Delta I}{I_{p}}=\frac{d^{3}}{LD^{2}}\left[1-0.8\left(\frac{d}{D}\right)^{-3}\right]^{-1},
 		\end{equation}
 		
-		where $d$ and $D$ are the diameter of the particle and pore, respectively, and $L$ is the length of the channel. Equation \ref{eq:spherecylinderRP} is probably the single most useful equation for sizing particles in resistive pulse experiments, however due to the preceding arguments we know it is only an approximation. For instance, it does not include particles that travel off-axis, and also assumes a channel length that is far greater than the length of the particle to be sized. Furthermore, it is only accurate for cylindrical channels and spherical particles. However, these specific conditions are seldom all true for systems of interest where RP sensing may be useful. The typical route taken in cases where Eq. \ref{eq:spherecylinderRP} cannot fully capture the experimental findings is to devise a model that relates the position of the particle, the particle's geometry, and the geometry of the channel to hte expected rp amplitude. then, based on the model, conclusions are drawn from the Rp signal about the positoining and dynamics of the translocation. As a concrete example, berge \emph{et al.} observed a positive correlation between the translocation times and the rp amplitudes of microbeads that were driven through their channels by an applied pressure. They argued that, due to the Poiseuille flow profile present in their channel, a larger translocation time correlated to an off-axis translocation, and therefore due to the correlation they observed between translocation time and RP amplitude, that off-axis translocations increased the RP amplitude magnitude. As another example, Tsutsui \emph{et al.} performed experiments in low-aspect ratio pores and found a significant variance in the observed resistive pulse amplitudes that could not be explained by size variance in the population alone. They argued, therefore, that the combination of particle and channel geometry created a unique situation where the observed RP amplitudes was highly trajectory dependent, and they then devised a model to relate the trajectory to the RP amplitude.
+		where $d$ and $D$ are the diameter of the particle and pore, respectively, and $L$ is the length of the channel. Equation \ref{eq:spherecylinderRP} is probably the single most useful equation for sizing particles in resistive pulse experiments, however due to the preceding arguments we know it is only an approximation. For instance, the equation does not consider particles that travel off-axis, and it also assumes a channel length that is far greater than the length of the particle to be sized. Furthermore, it is only accurate for cylindrical channels and spherical particles. Few real-world experimental RP systems hold to these sterile conditions. 
 		
-		In both of the above examples, the one-dimensional rp data set is used to study the complex dynamics of particle translocations through pores. The authors' inferences could very well be accurate, but could easily be validated or clarified by simply observing the translocations while simultaneously recording hte rp data. however, the difficulty in performing such an experiment is the scale at which they worked; at the nanoscale, only electron microscopy is viable due to the optical diffraction limit. However, because RP experiments are largely scale independent, one possible option is to scale the solution up to a size where optical diffraction is possible, and to perform simultaneous RP and optical measurements. Such experiments could be used to clarify the positional dependencies of the rp signal, and the results would generalize back down to the nanoscale.
+		The typical route taken in cases where Eq. \ref{eq:spherecylinderRP} cannot fully capture the experimental findings is to devise a model that relates the position of the particle, the particle's geometry, and the geometry of the channel to the expected RP amplitude. Then, based on the model, conclusions are drawn from the RP signal about the positioning and dynamics of the translocation. As a concrete example, Berge \emph{et al.} observed a positive correlation between the translocation times and the RP amplitudes of microbeads that were driven through their channels by an applied pressure. They argued that, due to the Poiseuille flow profile present in their channel, a larger translocation time correlated to an off-axis displacement. The correlation between translocation time and amplitude then suggested a correlation between off-axis displacement and increases RP amplitude, which they explained was due to the increased distortion of the electric field, which increases the total system resistance, when the channel drifted laterally from the channel axis. As another example of an RP system which invalidated the conditions of Eq. \ref{eq:spherecylinderRP}, Tsutsui \emph{et al.} performed RP experiments with spheres in low-aspect ratio pores and found a significant variance in the observed RP amplitudes that could not be explained by size variance in the population alone. They argued, therefore, that the combination of particle and channel geometry created a unique situation where the observed RP amplitudes were highly trajectory dependent, and they then devised a model to relate the trajectory to the RP amplitude.
 		
-		In order to resolve the positional dependencies of the RP amplitudes, we devised a microfluidic experimental and data analysis platform that allows simultaneous RP and IM measurements and analysis. The experimental system is based on a hihg-speed camera combined with an optical microcope which captures images of particles as they pass through a microfluidic channel while the ionic current is simultaneously recorded (described in greater detail in the following section). By tracking particles simultaneously in the two data streams, we are able to create a position-RP amplitude mapping for each particle. The mappings of many particles are combined to create a `resistance map' of the channel, a two-dimensional plot of hte local resistance in the channel as measured by the instantaneous RP amplitude $\Delta I/I_{p}$, and which can address specific questions about the positional dependencies of the resistive pulses, including but not limited to:
+		In both of the above examples, the one-dimensional RP data set is used to study the complex dynamics of particle translocations through pores. The authors' inferences could very well be accurate, but could easily be validated or clarified by simply observing the translocations while simultaneously recording the RP data. However, the difficulty in performing such an experiment is the physical scale at which they worked; at the nanoscale, only electron microscopy is viable due to the optical diffraction limit. In most cases, \textit{in situ} electron microscopy during an RP experiment is prohibitively difficult. However, because RP experiments are largely scale independent, one possible option is to scale the solution up to a size where optical diffraction is possible, and to perform simultaneous RP and optical measurements. Such experiments could be used to clarify the positional dependencies of the RP signal, and the results would generalize back down to the nanoscale.
+		
+		In order to resolve the positional dependencies of the RP amplitudes, we devised a microfluidic experimental and data analysis platform that allows simultaneous RP and IM measurements and analysis. The experimental system is based on a high-speed camera combined with an optical microcope which captures images of particles as they pass through a microfluidic channel while the ionic current is simultaneously recorded (described in greater detail in the following section). By tracking particles simultaneously in the two data streams, we are able to create a position-RP amplitude mapping for each particle. The mappings of many particles are combined to create a `resistance map' of the channel, a two-dimensional plot of the local resistance in the channel as measured by the instantaneous RP amplitude $\Delta I/I_{p}$, and which can address specific questions about the positional dependencies of the resistive pulses. Such questions include but are not limited to:
 		
 		\begin{itemize}
 			\item At which axial position does the RP amplitude attain its maximum value?
@@ -52,7 +54,33 @@
 		\end{figure}
 
 		
+		
+		
+		
+		
 		The program used to control each of the instruments used in the experiment was written in C++ and makes use of the Qt framework to provide a GUI environment in which to run the experiment. The program is open-sourced and available at https://github.com/tphinkle/cell\_controller. The software controls the high-speed camera, a data acquisition (DAQ) card used to record the current measurements, and the syringe pump. Each instrument uses its own communication protocol; the high-speed camera is controlled by commands sent via TCP/IP protocol over a 1 GB/s ethernet line, the DAQ card is controlled using the National Instruments NIDAQmx API, and lastly, the syringe pump is controlled via serial commands sent over an RS-232 line. A screen shot of the program is shown in Fig. \ref{fig:cellcontroller}.
+		
+		
+		\begin{figure}[t!]
+			\centering
+			\begin{subfigure}[t]{0.3\textwidth}
+				\centering
+				\includegraphics[width=1in]{transparency}
+				\caption{\textbf{Printed phototransparency of microfluidic channel designs.}}
+			\end{subfigure}
+			\begin{subfigure}[t]{0.3\textwidth}
+				\centering
+				\includegraphics[width=1in]{wafer}
+				\caption{\textbf{Channel mold patterned on SU8 photoresist, on a silicon wafer.} The transparency image is patterned onto the SU8 using soft photolithography techniques.}
+			\end{subfigure}
+			\begin{subfigure}[t]{0.3\textwidth}
+				\centering
+				\includegraphics[width=1in]{chip}
+				\caption{\textbf{Final PDMS and glass device configuration.} The glass was bonded with the PDMS channels after both were treated in an oxygen plasma. Each row of holes corresponds to a single channel. The holes themselves are the fluid inlet and outlet ports.}
+			\end{subfigure}
+			\caption{\textbf{Key ingredients in the microfluidic channel fabrication process.}}
+		\end{figure}
+		
 		
 		The channels used for these experiments were made from PDMS bonded to a glass slide. PDMS is a transparent elastomer that is relatively inert, transparent, and durable, and for these reasons is probably the most common material used in microfluidic experiments today. Two classes of channels were created in PDMS, constant-width and variable-width, which will be discussed separately in the discussion section. Within each class of channels, different geometries were considered. Images of some of the channels used in the experiments are shown in Fig. \ref{fig:trajectories}, along with lines indicating the tracked trajectories of individual particles (discussed below). $\SI{5}{\mu m}$ polystyrene beads were used as the experimental particle to track, and were suspended in $\SI{1}{M}$ unbuffered KCl solution. The high concentration of solution was chosen because it increases the signal-to-noise ratio, and facilitates analysis of the RP events. The syringe pump rate was chosen to be $\SI{0.005}{mL/min}$, which enabled a large number of events to be detected while also allowing for good sampling of individual events in both the RP ($\SI{250,000}{kHz}$) and IM ($\SI{50,000}{kHz}$ sample, $\SI{10}{\mu s}$ exposure) signals. At this flow rate, particles traveled a small ($\SI{<10}{\mu m}$) distance in between frames, and minimal blurring occured. The \textit{cell\_controller} program recorded the camera and resistive pulse data simultaneously so that the two data streams are guaranteed to capture the same particle translocations.
 		
