--- a/dissertation/chapter5.tex
+++ b/dissertation/chapter5.tex
@@ -56,7 +56,7 @@
 
 			
 			First, we start with the cells. Three human cell lines were provided for the experiments, chosen for the variety of deformation and size properties they exhibit. The cell lines are HCT-116 (colorectal cancer), 293-T (derived from human embryonic kidney cells), and THP-1 (monocytes). Images of the HCT-116 and 293-T cells are shown in Fig. \ref{fig:celllines}. The cells are filtered and diluted to a concentration of $0.5\times10^{6}/$mL or $1\times10^{6}/$mL in a solution of HBSS, a relatively highly conductive biocompatible buffer. In most experiments, the solution was doped with methylcellulose, another biocompatible component that increases the viscosity of the solution, which should promote cell deformations. Pluronic, a biocompatible surfactant, is added at $0.1\%$ concentration by volume.
-			
+						
 			\begin{table}
 				\begin{center}
 				    \begin{tabular}{lrc}\hline
@@ -80,7 +80,7 @@
 						PDMS cure on SU8 mold & Hot plate & $75^{\circ}$C, $\SI{150}{min}$ \\
 						PDMS-glass bond & Harrick-Plasma oxygen plasma chamber & $\SI{300}{mT}$, med. power, $\SI{35}{sec}$    
 				    \end{tabular}
-				    \caption{Class Mark List}\label{tab:devicefab}
+				    \caption{SU8 photolithography procedure} \label{tab:devicefab}
 				\end{center}
 			\end{table}
 			
