--- a/dissertation/chapter6.tex
+++ b/dissertation/chapter6.tex
@@ -1,4 +1,4 @@
-\graphicspath{{../images/ch1/}}	% Image directory
+\graphicspath{{../images/ch6/}}	% Image directory
 
 
 \chapter{Conclusion}
@@ -37,7 +37,7 @@ In the next few sections, we'll quickly recap each of the sections of this thesi
 		
 \section{Closing remarks}
       
-	This dissertation is focused on advancing various applications involving ion conductors. While most of the projects (but not all) were brought to a satisfying conclusion, much work remains to be done. It is the author's hope that future graduate students interested in one or more of the subjects presented will be able to use this thesis as a starting point and develop the ideas further.
+	This dissertation is focused on advancing various applications involving ion conducting channels, especially in nanopores and in microfluidic channels. While most of the projects (but not all) were brought to a satisfying conclusion, much work remains to be done. It is the author's hope that future graduate students interested in one or more of the subjects presented will be able to use this thesis as a starting point and develop the ideas further.
 	
 		
 
