--- a/dissertation/preliminaries.tex
+++ b/dissertation/preliminaries.tex
@@ -4,7 +4,7 @@
 
 % Use the wording given in the official list of degrees awarded by UCI:
 % http://www.rgs.uci.edu/grad/academic/degrees_offered.htm
-\degreefield{Physics \& Astronomy}
+\degreefield{Physics}
 
 % Your name as it appears on official UCI records.
 \authorname{Preston Hinkle}
@@ -37,24 +37,12 @@
 % The dedication page is optional.
 \dedications
 {
-  (Optional dedication page)
-  
-  To ...
+	
 }
 
 \acknowledgments
 {
-  I would like to thank...
-  
-  (You must acknowledge grants and other funding assistance. 
-  
-  You may also acknowledge the contributions of professors and
-  friends.
-  
-  You also need to acknowledge any publishers of your previous
-  work who have given you permission to incorporate that work
-  into your dissertation. See Section 3.2 of the UCI Thesis and
-  Dissertation Manual.)
+	
 }
 
 
@@ -84,19 +72,19 @@
 \textbf{EDUCATION}
   
   \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}lr}
-    \textbf{Doctor of Philosophy in Computer Science} & \textbf{2012} \\
+    \textbf{Doctor of Philosophy in Physics} & \textbf{2017} \\
     \vspace{6pt}
-    University name & \emph{City, State} \\
-    \textbf{Bachelor of Science in Computational Sciences} & \textbf{2007} \\
+    University of California, Irvine & \emph{Irvine, California} \\
+    \textbf{Bachelor of Science in Physics} & \textbf{2011} \\
     \vspace{6pt}
-    Another university name & \emph{City, State} \\
+    The Ohio State University & \emph{Columbus, Ohio} \\
   \end{tabular*}
 
 \vspace{12pt}
 \textbf{RESEARCH EXPERIENCE}
 
   \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}lr}
-    \textbf{Graduate Research Assistant} & \textbf{2007--2012} \\
+    \textbf{Graduate Student Researcher} & \textbf{2012--2017} \\
     \vspace{6pt}
     University of California, Irvine & \emph{Irvine, California} \\
   \end{tabular*}
@@ -105,23 +93,32 @@
 \textbf{TEACHING EXPERIENCE}
 
   \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}lr}
-    \textbf{Teaching Assistant} & \textbf{2009--2010} \\
+    \textbf{Teaching Assistant} & \textbf{2012--2016} \\
     \vspace{6pt}
-    University name & \emph{City, State} \\
+    University of California, Irvine & \emph{Irvine, California} \\
+  \end{tabular*}
+  
+   \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}lr}
+    \textbf{Teaching Assistant} & \textbf{2012} \\
+    \vspace{6pt}
+    The Ohio State University & \emph{Columbus, Ohio} \\
   \end{tabular*}
 
+
+  
 \pagebreak
 
 \textbf{REFEREED JOURNAL PUBLICATIONS}
 
-  \bibentry{Yang2016}
-  \bibentry{Qiu2015}
+	\bibentry{Hinkle2017}
+	\bibentry{Yang2016}
+	\bibentry{Qiu2015}
 
-\vspace{12pt}
-\textbf{REFEREED CONFERENCE PUBLICATIONS}
-
-  \mypubentry{Awesome paper}{Jun 2011}{Conference name}
-  \mypubentry{Another awesome paper}{Aug 2012}{Conference name}
+% \vspace{12pt}
+% \textbf{REFEREED CONFERENCE PUBLICATIONS}
+% 
+% 	\mypubentry{Awesome paper}{Jun 2011}{Conference name}
+% 	\mypubentry{Another awesome paper}{Aug 2012}{Conference name}
 
 \vspace{12pt}
 \textbf{SOFTWARE}
@@ -139,7 +136,7 @@
 % supposedly somewhat of a soft constraint.
 \thesisabstract
 {
-  The abstract of your contribution goes here.
+	There are a diverse range of applications involving fluidic systems at the micro- and nanoscale. Making use of the nanoscale physics that takes place in the vicinity of charged surfaces, there is the possibility that nanopores, holes on the order of $\SI{1}{nm}$ in size, could be used to make complex integrated ionic circuits. For inspiration on what such circuits could achieve we only need to look to biology systems, immensely complex machines that at their most basic level require precise control of ions and intercellular electric potentials to function. In order to contribute to the ever expanding field of nanopore technology, we engineered novel hybrid insulator-conductor nanopores that behave analagously to ionic diodes, which allow passage of current flow in one direction but severely limit the current in the opposite direction. Not only did the behavior of the pore give key insights into the fundamental physics and chemistry underlying the electrical double layer, but it can also be considered as a standard rectifying element in ionic circuits. Another application of ion conducting channels is a particle sensing method, known as resistive pulse sensing. We present three main experiments that expand the capacity of resistive pulse sensing applications. First, we demonstrate how resistive pulse sensing in pores with longitudinal irregularities can be used to measure the lengths of individual nanoparticles. Then, we describe an entirely new hyridized method, whereby resistive pulse sensing is combined with optical imaging. The hybrid method allows for validation of the resistive pulse signals, and will greatly contribute to their interpretability. We present experiments that explore some of the possibilities of the hybrid method. Then, building off the hybrid method we present our findings for experiments performed with using resistive pulse sensing to measure the deformability of particles. Using a novel microfluidic channel design, we were able to reproducibily induce deformation of cells in a controlled manner. We describe how these deformations could be detected with the resistive pulse signal, paving the way for resistive pulse sensing based cell deformability cytometers.
 }
 
 
